WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281614
[WebGPU] Destroyed canvas backing shouldn't be allowed as a render target
https://bugs.webkit.org/show_bug.cgi?id=281614
Summary
[WebGPU] Destroyed canvas backing shouldn't be allowed as a render target
Mike Wyrzykowski
Reported
2024-10-16 13:11:52 PDT
[WebGPU] Destroyed canvas backing shouldn't be allowed as a render target
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-10-16 13:12:06 PDT
rdar://137965520
Mike Wyrzykowski
Comment 2
2024-10-16 13:17:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35310
EWS
Comment 3
2024-10-18 09:50:37 PDT
Committed
285417@main
(d14a13b31197): <
https://commits.webkit.org/285417@main
> Reviewed commits have been landed. Closing PR #35310 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug