[WebGPU] Destroyed canvas backing shouldn't be allowed as a render target https://bugs.webkit.org/show_bug.cgi?id=281614 rdar://137965520

Reviewed by Tadeu Zagallo.

Renders to destroyed canvas backing should be rejected.

* LayoutTests/fast/webgpu/nocrash/fuzz-281614-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-281614.html: Added.
Add canvas backing.

* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::m_maxDrawCount):

Canonical link: https://commits.webkit.org/285417@main